--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .godot/
 /android/
 
+*.DS_Store
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
